libs/preprocessor/tests/errors/pe25_exec/stderr.ansi
[0m[1m[38;5;9merror[PE25][0m[1m: __EXEC is not supported[0m
  [0m[36m┌─[0m source.hpp:2:13
  [0m[36m│[0m
[0m[36m2[0m [0m[36m│[0m     value = [0m[31m__EXEC[0m(call something);
  [0m[36m│[0m             [0m[31m^^^^^^[0m [0m[31m__EXEC is not supported[0m

